syntax = "proto3";

service Camera {
    rpc CameraConfiguration (CameraSettings) returns (Answer) {}
}

message CameraSettings {
    int32 onScreenWidth = 1;
    int32 onscreenHeight = 2;
}

message Answer {
    bool error = 1;
}